# LIRC-port-for-Mac-OS-X

./: .cvsignore  .gitignore  .project  ANNOUNCE  AUTHORS  ChangeLog  Makefile.am  Makefile.save  NEWS  README  Readme.md  TODO  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  data2setup.sh  setup.data  setup.sh
contrib/: lirc.debian  lirc.rules  lirc.suse  lircd.conf  lircd.suse6  release-process.txt
contrib/hal/: 20-ircontrol-lirc.fdi  gen-hal-fdi.pl
daemons/: .cvsignore  .gitignore  Makefile.am  config_file.c  config_file.h  dump_config.c  dump_config.h  hardware.h  hw-types.c  hw_accent.c  hw_alsa_usb.c  hw_atilibusb.c  hw_atwf83.c  hw_audio.c  hw_audio_alsa.c  hw_awlibusb.c  hw_bte.c  hw_bte.h  hw_caraca.c  hw_commandir.c  hw_commandir.h  hw_creative.c  hw_creative_infracd.c  hw_default.c  hw_default.h  hw_devinput.c  hw_dfclibusb.c  hw_dsp.c  hw_ea65.c  hw_ftdi.c  hw_hiddev.c  hw_i2cuser.c  hw_iguanaIR.c  hw_irlink.c  hw_irman.c  hw_livedrive.c  hw_livedrive_common.c  hw_livedrive_common.h  hw_livedrive_midi.c  hw_livedrive_seq.c  (+42 more)
daemons/irrecord.dSYM/Contents/: Info.plist
daemons/lircd.dSYM/Contents/: Info.plist
daemons/lircmd.dSYM/Contents/: Info.plist
doc/: .cvsignore  Makefile.am  lirc.css  man2html.c  release-html.sh  release-man.sh  table.sh
doc/html-source/: audio-alsa.html  audio.html  configure.html  devinput.html  doc.html  foot.html  head.html  head1.html  head2.html  help.html  imon.html  index.html  install.html  programs.html  pronto2lirc.html  technical.html
doc/man/: .cvsignore  Makefile.am
doc/man-source/: help2man.inc  irexec.inc  irpty.inc  irrecord.inc  irsend.inc  irw.inc  irxevent.inc  lircd.inc  lircmd.inc  lircrcd.inc  rc.inc  xmode2.inc
doc/man2html.dSYM/Contents/: Info.plist
doc/man2html.dSYM/Contents/Resources/DWARF/: man2html
drivers/: Makefile.am  Makefile.common  kcompat.h  lirc.h
drivers/irman/: .cvsignore  Makefile.am  lirmand.c
drivers/lirc_atiusb/: .cvsignore  Makefile.am  lirc_atiusb.c
drivers/lirc_aver/: .cvsignore  Makefile.am  lirc_aver.c
drivers/lirc_aver/patches/: lirc_aver-bttv-0.6.4.diff  lirc_aver-kernel-2.2.10.diff  lirc_aver-kernel-2.2.12.diff
drivers/lirc_bt829/: .cvsignore  Makefile.am  lirc_bt829.c
drivers/lirc_cmdir/: .cvsignore  Makefile.am  commandir.c  commandir.h  lirc_cmdir.c  lirc_cmdir.h
drivers/lirc_dev/: .cvsignore  Makefile.am  lirc_dev.c  lirc_dev.h
drivers/lirc_ene0100/: Makefile.am  lirc_ene0100.c  lirc_ene0100.h
drivers/lirc_fly98/: .cvsignore  ChangeLog  Makefile.am  README  bttv063-gpiomon-0.0.2.diff  bttv063-gpiomon.diff  kbttv2210-gpiomon.diff  kbttv2211-gpiomon.diff  lirc_fly98.c  lirc_fly98.h
drivers/lirc_fly98/patches/: lirc_fly98-kernel-2.2.10.diff  lirc_fly98-kernel-2.2.14.diff  lirc_fly98-kernel-2.2.15.diff
drivers/lirc_gpio/: .cvsignore  Makefile.am  lirc_gpio.c  lirc_gpio_i.c  lirc_gpio_p.c
drivers/lirc_haup/: .cvsignore  Makefile.am  lirc_haup.c  lirc_haup.h  lirc_haup_new.c  lirc_haup_new.h
drivers/lirc_haup/patches/: lirc_haup-linux-2.2.12.diff
drivers/lirc_i2c/: .cvsignore  Makefile.am  lirc_i2c.c
drivers/lirc_igorplugusb/: .cvsignore  lirc_igorplugusb.c
drivers/lirc_imon/: .cvsignore  lirc_imon.c
drivers/lirc_it85/: Makefile.am  lirc_it85.c
drivers/lirc_it87/: .cvsignore  Makefile.am  README  lirc_it87.c  lirc_it87.h
drivers/lirc_ite8709/: .cvsignore  lirc_ite8709.c
drivers/lirc_mceusb/: .cvsignore  Makefile.am  lirc_mceusb.c
drivers/lirc_mceusb2/: .cvsignore  lirc_mceusb2.c
drivers/lirc_parallel/: .cvsignore  Makefile.am  lirc_parallel.c  lirc_parallel.h
drivers/lirc_pixview/: .cvsignore  Makefile.am  lirc_pixview.c
drivers/lirc_redrat3/: Makefile.am  lirc_redrat3.c
drivers/lirc_sasem/: .cvsignore  Makefile.am  lirc_sasem.c  lirc_sasem.h
drivers/lirc_serial/: .cvsignore  Makefile.am  lirc_serial.c
drivers/lirc_sir/: .cvsignore  Makefile.am  lirc_sir.c
drivers/lirc_streamzap/: .cvsignore  lirc_streamzap.c
drivers/lirc_ttusbir/: .cvsignore  lirc_ttusbir.c
drivers/lirc_wpc8769l/: lirc_wpc8769l.c  lirc_wpc8769l.h
remotes/acer/: lircd.conf.Aspire_6530G
remotes/apple/: lircd.conf.macmini
remotes/asus/: lircd.conf.asus  lircd.conf.digimatrix
remotes/atiusb/: lircd.conf.atilibusb  lircd.conf.atiusb
remotes/aureal/: lircd.conf.atwf83
remotes/avermedia/: lircd.conf.avermedia  lircd.conf.avermedia98  lircmd.conf.avermedia
remotes/bestbuy/: lircd.conf.bestbuy2  lircmd.conf.bestbuy2
remotes/creative/: lircd.conf.alsa_usb  lircd.conf.breakoutbox  lircd.conf.livedrive
remotes/dvico/: lircd.conf.fusionHDTV
remotes/ericsson/: lircd.conf.bte
remotes/fly98/: lircd.conf.fly98  lircmd.conf.fly98
remotes/generic/: DENON.conf
remotes/hauppauge/: lircd.conf.hauppauge
remotes/imon/: lircd.conf.imon  lircd.conf.imon-antec-veris  lircd.conf.imon-antec-veris.conf  lircd.conf.imon-knob  lircd.conf.imon-pad  lircd.conf.imon-rsc  lircd.conf.imon-ultrabay
remotes/kworld/: lircd.conf.kworld
remotes/leadtek/: lircd.conf.PVR2000  lircd.conf.RM-0010
remotes/life-view/: lircd.conf.FlyVideo_II  lircd.conf.fly98  lircd.conf.flyvideo
remotes/mceusb/: lircd.conf.mceusb
remotes/packard_bell/: lircd.conf.packard_bell
remotes/pinnacle_systems/: lircd.conf.pctv
remotes/pixelview/: lircd.conf.playtv_pro  lircd.conf.remotemaster  lircrc.playtv_pro
remotes/sasem/: lircd.conf.dignhv5  lircd.conf.sasem
remotes/sigma_designs/: lircd.conf.realmagic
remotes/technisat/: lircd.conf.mediafocusI
remotes/winfast/: lircd.conf.tv2000  lircmd.conf.tv2000
tools/: .cvsignore  Makefile.am  ircat.c  irexec.c  irpty.c  irrecord.c  irsend.c  irw.c  irxevent.c  lirc_client.c  lirc_client.h  lirc_clientd.c  lircd.conf  lircrcd.c  mode2.c  pronto2lirc.py  rc.c  smode2.c  xmode2.c
tools/irsend.dSYM/Contents/: Info.plist
tools/irw.dSYM/Contents/: Info.plist
tools/mode2.dSYM/Contents/: Info.plist
